--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,17 +1,22 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<div *ngIf="auth.user |async as user">
+    <p>{{user.uid}}</p>
+    <button type="submit" class="btn btn-primary mb-3" (click)="signOut();">Sign Out</button>
+</div>
+<form [formGroup]=" loginForm" (ngSubmit)="onSubmit()" class="p-2">
     <div class="mb-3 row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+        <label class="col-sm-2 col-form-label">Username</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" formControlName="id">
         </div>
     </div>
     <div class="mb-3 row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+        <label class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
             <input type="password" class="form-control" formControlName="pw">
         </div>
     </div>
     <div class="mb-3 row">
+        <div class="col-sm-2"></div>
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary mb-3">Sign In</button>
         </div>
