--- a/src/app/components/find-person/find-person.component.html
+++ b/src/app/components/find-person/find-person.component.html
@@ -1,8 +1,10 @@
 <form [formGroup]="findPersonForm" class="m-4" (submit)="onSubmit()">
-    <label class="form-label">Search Someone</label>
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Type username ..." aria-describedby="button-addon"
+        <input type="text" class="form-control" placeholder="Search username ..." aria-describedby="button-addon"
             formControlName="username">
         <button class="btn btn-outline-secondary" type="submit" id="button-addon">Find</button>
     </div>
 </form>
+<div *ngIf="result" class="mx-4 text-danger">
+    {{result}}
+</div>
