--- a/src/app/pages/p404/p404.component.html
+++ b/src/app/pages/p404/p404.component.html
@@ -1,1 +1,7 @@
-<p>p404 works!</p>
+<div class="my-auto p-5" id="content">
+    <div class="text-center py-5">
+        <h1 class="display-1">404</h1>
+        <h2>Page not found</h2>
+        <a routerLink="/" class="btn btn-info">Go to Home</a>
+    </div>
+</div>
